--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,23 @@ authors = ["Edd Salkield <edd@salkield.uk>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+sqlalchemy = "^1.3.19"
+validators = "^0.18.0"
+requests = "^2.24.0"
+bs4 = "^0.0.1"
+pathlib = "^1.0.1"
+slimit = "^0.8.1"
+datetime = "^4.3"
+sqlalchemy_utils = "^0.36.8"
+typer = "^0.3.2"
+termcolor = "^1.1.0"
+babel = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+
+[tool.poetry.scripts']
+auction-scraper = 'main:main'
 
 [build-system]
 requires = ["poetry>=0.12"]
