--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ sqlalchemy_utils = "^0.36.8"
 typer = "^0.3.2"
 termcolor = "^1.1.0"
 babel = "^2.8.0"
+python-dateutil = "^2.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
