--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
 [tool.poetry]
 name = "auction-scraper"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Edd Salkield <edd@salkield.uk>"]
+packages = [
+    { include = "auction_scraper" },
+    { include = "main.py" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
