Update to SQLAlchemy 1.4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ bs4 = "^0.0.1"
 pathlib = "^1.0.1"
 slimit = "^0.8.1"
 datetime = "^4.3"
-sqlalchemy_utils = "^0.36.8"
+#sqlalchemy_utils = "^0.36.8"
+sqlalchemy_utils = "^0.37.8"
 typer = "^0.3.2"
 termcolor = "^1.1.0"
 babel = "^2.8.0"
